--- a/lab01/lab01.csproj
+++ b/lab01/lab01.csproj
@@ -4,7 +4,7 @@
 	<OutputType>Exe</OutputType>
 	<TargetFramework>net8.0-windows</TargetFramework>
 	<EnableWindowsTargeting>true</EnableWindowsTargeting>
-	<ImplicitUsings>enable</ImplicitUsings>
+	<ImplicitUsings>disable</ImplicitUsings>
 	<Nullable>enable</Nullable>
 	<UseWindowsForms>true</UseWindowsForms>
 </PropertyGroup>
